<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/connect"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/photoMe"
            android:src="@drawable/photomain"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/appName"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_700"
            android:text="@string/about"
            android:textColor="@color/purple_light"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/connection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_700"
            android:text="@string/connection"
            android:textColor="@color/purple_light"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/blog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_700"
            android:text="@string/blog"
            android:textColor="@color/purple_light"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_700"
            android:textColor="@color/purple_light"
            android:text="@string/gallery" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            android:src="@drawable/amblem"
            tools:ignore="ImageContrastCheck" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>