<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".DetailInfo">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="356dp"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/animal"
            android:layout_width="match_parent"
            android:layout_height="265dp"
            android:layout_weight="1"
            android:contentDescription="@string/animal"
            tools:ignore="ImageContrastCheck,ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/speciesname"
            android:textColor="@color/orange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/speciesname"
            android:textStyle="bold"
            android:textAlignment="center"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/age"
            android:textColor="@color/green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/age"
            android:textAlignment="center"
            tools:ignore="TextContrastCheck" />



        <TextView
            android:id="@+id/lifeTime"
            android:textColor="@color/green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/description"
            android:textColor="@color/dark_purple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>