<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Information">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="3dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/adress"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/adress"
            android:src="@drawable/location" />

        <TextView
            android:id="@+id/adresstxt"
            android:layout_width="316dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/adress"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="3dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/telephone"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/telephone"
            android:src="@drawable/telephone" />

        <TextView
            android:id="@+id/telephonetxt"
            android:layout_width="316dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/telephone"
            android:textColor="@color/black" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="3dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/email"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/mail"
            android:src="@drawable/email" />

        <TextView
            android:id="@+id/emailtxt"
            android:layout_width="316dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/mail"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="3dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/linkedin"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/linkedin"
            android:src="@drawable/linkedin" />

        <TextView
            android:id="@+id/linkedintxt"
            android:layout_width="316dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/linkedin" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>